name:                habsim
version:             0.1.0.0
synopsis:            High Altitude Balloon flight path simulator
-- description:         
homepage:            https://github.com/kg4sgp/habsim
license:             BSD3
license-file:        LICENSE
author:              Jimmy Carter, Ricky Elrod
maintainer:          kg4sgp@gmail.com, ricky@elrod.me
copyright:           (c) 2017 Jimmy Carter, (c) 2017 Ricky Elrod
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     Data.HABSim.Grib2.CSVParse
                     , Data.HABSim.Grib2.CSVParse.Types
                     , Data.HABSim.HABSim
  other-extensions:    CPP, GeneralizedNewtypeDeriving, OverloadedStrings
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.9 && < 1
                     , cassava >= 0.4 && < 0.5
                     , dlist >= 0.7 && < 0.9
                     , mtl >= 2 && < 3
                     , time >= 1.5 && < 2
                     , vector >= 0.10 && < 1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable habsim
  main-is:             src/exe/HABSim.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O3
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.9 && < 1
                     , cassava >= 0.4 && < 0.5
                     , dlist >= 0.7 && < 0.9
                     , habsim
                     , mtl >= 2 && < 3
                     , time >= 1.5 && < 2
                     , vector >= 0.10 && < 1
