name:                habsim
version:             0.1.0.0
synopsis:            High Altitude Balloon flight path simulator
-- description:         
homepage:            https://github.com/kg4sgp/habsim
license:             BSD3
license-file:        LICENSE
author:              Jimmy Carter, Ricky Elrod
maintainer:          kg4sgp@gmail.com, ricky@elrod.me
copyright:           (c) 2017 Jimmy Carter, (c) 2017 Ricky Elrod
category:            Data
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.2

library
  exposed-modules:     Data.HABSim.Grib2.CSVParse
                     , Data.HABSim.Grib2.CSVParse.Types
                     , Data.HABSim.HABSim
                     , Data.HABSim.Internal
                     , Data.HABSim.Types
  other-extensions:    CPP, GeneralizedNewtypeDeriving, ViewPatterns
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.9 && < 1
                     , cassava >= 0.4 && < 0.5
                     , containers >= 0.5 && < 0.6
                     , dlist >= 0.7 && < 0.9
                     , mtl >= 2 && < 3
                     , time >= 1.5 && < 2
                     , vector >= 0.10 && < 1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable habsim-jsdump
  main-is:             JSList.hs
  hs-source-dirs:      src/exe
  default-language:    Haskell2010
  ghc-options:         -Wall -O3
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.9 && < 1
                     , cassava >= 0.4 && < 0.5
                     , containers >= 0.5 && < 0.6
                     , dlist >= 0.7 && < 0.9
                     , habsim
                     , mtl >= 2 && < 3
                     , time >= 1.5 && < 2
                     , vector >= 0.10 && < 1

executable habsim-debug
  main-is:             DumpEverything.hs
  hs-source-dirs:      src/exe
  default-language:    Haskell2010
  ghc-options:         -Wall -O3
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.9 && < 1
                     , cassava >= 0.4 && < 0.5
                     , containers >= 0.5 && < 0.6
                     , dlist >= 0.7 && < 0.9
                     , habsim
                     , mtl >= 2 && < 3
                     , time >= 1.5 && < 2
                     , vector >= 0.10 && < 1
